# auto-sindico

./: .env.template  Dockerfile  Pipfile  README.md  crontab  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: main.yml  release.yml
argocd-amd/: auto-sindico-amd-ingress.yaml  auto-sindico-amd.yaml
argocd-arm/: auto-sindico-arm-ingress.yaml  auto-sindico-arm.yaml
config/: database.py  database_async.py
dto/: cobrar_request.py  email.py  extrato_request.py  fechamento_requests.py  pagbank_request.py  pix.py  resumo_requests.py  totalizacao.py
integrations/: pagbank.py
repository/: caixa.py  concialicao.py  despesas.py  extrato.py  fechamento_despesas.py
service/: bucket.py  cobrar_service.py  csv_service.py  drive_service.py  email_service.py  fechamento_despesas.py  fechamento_pagamento.py  message_whatsapp.py  qrcode_service.py  resumo.py  send_whatsapp.py  whatsapp_service.py
service/drive/: bb.py  pagbank.py
service/extrato/: extrato_abstract.py  factory_extrato.py  mercadopago.py  pluggy.py
templates/: email.html  home.html  template.html  whatsapp_template.txt
util/: datas_uteis.py  identificadores.py
