[tool.poetry]
name = "auto-sindico"
version = "0.1.0"
description = ""
authors = ["Seu Nome <seu.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.18.3"
fastapi = "^0.81.0"
pydantic = "*"
httpx = "*"
jinja2 = "*"
python-dotenv = "*"
mysql-connector-python = "*"
google-api-python-client = "*"
google-auth-httplib2 = "*"
google-auth-oauthlib = "*"
pandas = "*"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"